[metadata]
author = Hans Feldt <hans.feldt@ericsson.com>
name = ironic-hds
version = 0.0.1
summary = OpenStack Ironic driver for Redfish/HDS systems
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    ironic_hds

[entry_points]
ironic.drivers =
    agent_hds = ironic_hds.hds:AgentHDSDriver

[install]
install-lib=/usr/lib/python2.7/site-packages
